--- a/pages/about.html
+++ b/pages/about.html
@@ -8,10 +8,10 @@
     <title>About</title>
     <!-- add icon link -->
     <link rel = "icon" href = 
-    "icon.png" 
+    "../image/icon.png" 
             type = "image/x-icon">
     <!--Link Css-->
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="../css/about.css">
     <!--Link font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,23 +35,23 @@
         <!-- Logo-->
         <div class="logo">
 
-            <img class = " Logo "src="iforgot-logo.png">
+            <img class = " Logo "src="../image/iforgot-logo.png">
 
 
         </div>
         <!-- Menu -->
         <ul id="js-menu">
-            <li><a href='index.html'>Home</a></li> 
-            <li><a href='about.html'>About</a></li>
-            <li><a href='todolist.html'>IChecklist</a></li>
-            <li><a href='notes.html'>INotes</a></li>
-            <li><a href='Itracker.html'>ITracker</a></li>
+            <li><a href='../index.html'>Home</a></li> 
+            <li><a href='../pages/about.html'>About</a></li>
+            <li><a href='../pages/todolist.html'>IChecklist</a></li>
+            <li><a href='../pages/notes.html'>INotes</a></li>
+            <li><a href='../pages/Itracker.html'>ITracker</a></li>
         </ul>
         
     </nav>
      
     <!-- CheckList -->
-    <img src="checklist.png" class = "ICheklistimg">
+    <img src="../image/checklist.png" class = "ICheklistimg">
     <div class = "IChecklist">
         <h1 class="Checklist" > IChecklist </h1>
         <p>Don't know what to do first? Forgot to send your homework?<br>
@@ -62,7 +62,7 @@
 
     <!-- Notes -->
 
-    <img src="notes.png" class = "INotesimg">
+    <img src="../image/notes.png" class = "INotesimg">
     <div class = "INotes">
         <h1 class = "Notes"> INotes </h1>
         <p class = "Pnotes">INotes
@@ -75,7 +75,7 @@
 
     <!-- Tracker-->
 
-    <img src="Tracker.png" class = "ITrackerimg">
+    <img src="../image/Tracker.png" class = "ITrackerimg">
     <div class = "ITracker">
         <h1 class = "Tracker"> ITracker </h1>
         <p> Having a hard time finding your items? Don’t worries<br>
@@ -91,7 +91,7 @@
 
 
 
-    <script src="about.js"></script> <!-- Link Javascript-->
+    <script src="../js/about.js"></script> <!-- Link Javascript-->
 </body>
 </html>
    
