--- a/pages/notes.html
+++ b/pages/notes.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- add icon link -->
   <link rel = "icon" href = 
-  "icon.png" 
+  "../image/icon.png" 
           type = "x-icon">
   <!-- Iconscout Link For Icons -->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -24,6 +24,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
+
+
+  <link rel="stylesheet" href="../css/notes.css">
 </head>
 
 <body>
@@ -36,13 +39,13 @@
     <!-- Logo-->
     <div class="logo">
 
-      <img class=" Logo " src="iforgot-logo.png">
+      <img class=" Logo " src="../image/iforgot-logo.png">
 
 
     </div>
     <!-- Menu -->
     <ul id="js-menu">
-      <li><a href='index.html'>Home</a></li>
+      <li><a href='../index.html'>Home</a></li>
       <li><a href='about.html'>About</a></li>
       <li><a href='todolist.html'>IChecklist</a></li>
       <li><a href='notes.html'>INotes</a></li>
@@ -83,7 +86,7 @@
     </li>
   </div>
 
-  <script src="notes.js"></script>
+  <script src="../js/notes.js"></script>
 
 </body>
 
