--- a/pages/todolist.html
+++ b/pages/todolist.html
@@ -7,10 +7,10 @@
 	<title>IChecklist</title>
 	<!-- add icon link -->
 	<link rel = "icon" href = 
-	"icon.png" 
+	"../image/icon.png" 
 			type = "x-icon">
 	<!-- CSS Import -->
-	<link rel="stylesheet" href="todolist.css" />
+	<link rel="stylesheet" href="../css/todolist.css" />
 	<!-- End of CSS Import -->
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,8 +26,8 @@
 	<!-- End of Fonts -->
 </head>
 <body>
-	 <!-- Navigation Bar -->
-	 <nav>
+	<!-- Navigation Bar -->
+    <nav>
         <!-- Hamberger Menu-->
         <span class="nav-toggle" id="js-nav-toggle">
             <i class="fas fa-bars"></i>
@@ -35,20 +35,19 @@
         <!-- Logo-->
         <div class="logo">
 
-			<img class = " Logo " src="iforgot-logo.png">
+            <img class = " Logo "src="../image/iforgot-logo.png">
 
 
         </div>
-
+        <!-- Menu -->
         <ul id="js-menu">
-            <li><a href='index.html'>Home</a></li> 
-            <li><a href='about.html'>About</a></li>
-            <li><a href='todolist.html'>IChecklist</a></li>
-            <li><a href='notes.html'>INotes</a></li>
-            <li><a href='Itracker.html' >ITracker</a></li>
+            <li><a href='../index.html'>Home</a></li> 
+            <li><a href='../pages/about.html'>About</a></li>
+            <li><a href='../pages/todolist.html'>IChecklist</a></li>
+            <li><a href='../pages/notes.html'>INotes</a></li>
+            <li><a href='../pages/Itracker.html'>ITracker</a></li>
         </ul>
-
-
+        
     </nav>
 	<br><br>
 
@@ -104,7 +103,7 @@
 	<!-- End of App Wrapper -->
 
 	<!-- JS Import -->
-	<script src="todolist.js"></script>
+	<script src="../js/todolist.js"></script>
 	<!-- End of JS Import -->
 </body>
 </html>
