--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>IForgot</title>
      <!-- add icon link -->
      <link rel = "icon" href = 
-     "icon.png" 
+     "./image/icon.png" 
              type = "x-icon">
     <!--Link Css-->
     <link rel="stylesheet" href="style.css">
@@ -35,23 +35,23 @@
         <!-- Logo-->
         <div class="logo">
 
-            <img class = " Logo "src="iforgot-logo.png">
+            <img class = " Logo "src="./image/iforgot-logo.png">
 
 
         </div>
         <!-- Menu -->
         <ul id="js-menu">
-            <li><a href='index.html'>Home</a></li> 
-            <li><a href='about.html'>About</a></li>
-            <li><a href='todolist.html'>IChecklist</a></li>
-            <li><a href='notes.html'>INotes</a></li>
-            <li><a href='Itracker.html'>ITracker</a></li>
+            <li><a href='./index.html'>Home</a></li> 
+            <li><a href='./pages/about.html'>About</a></li>
+            <li><a href='./pages/todolist.html'>IChecklist</a></li>
+            <li><a href='./pages/notes.html'>INotes</a></li>
+            <li><a href='./pages/Itracker.html'>ITracker</a></li>
         </ul>
 
 
     </nav>
     
-    <img src="iforgot picture.png ">
+    <img src="./image/iforgot picture.png">
     <div>
         <h2>The best Web App<br>for the forgetfools</h2> 
         <p>IForgot offers a variety of services, including a personal asset tag, business <br>and personal check list.
